[package]
name = "simp6502"
version = "0.1.0"
authors = ["Alexander Overstreet <alex@overstreet.me>"]
edition = "2021"
description = "Opcode definition and interpreter for 6502 assembly"
repository = "https://github.com/traceover/simp6502"
license = "MIT"
license-file = "LICENSE"
keywords = ["6502", "opcode", "interpreter", "emulator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
int-enum = "0.5.0"
